--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body data-barba="wrapper">
-  <div class="transition"></div>
-  <div class="wrapper">
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body data-barba="wrapper">
+    <div class="transition"></div>
+    <div class="wrapper">
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
 
-  <main data-barba="container" data-barba-namespace="contact" class="container">
-    <div class="header">
-      <h1>Contact</h1>
-      <div class="header-revealer"></div>
+      <main
+        data-barba="container"
+        data-barba-namespace="home"
+        class="container"
+      >
+        <div class="header">
+          <h1>Contact</h1>
+          <div class="header-revealer"></div>
+        </div>
+        <div class="footer">(03)</div>
+      </main>
     </div>
-    <div class="footer">(03)</div>
-  </main>
-  
-  <script src="https://unpkg.com/@barba/core"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="./script.js"></script>
-</body>
+
+    <script src="https://unpkg.com/@barba/core"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
